WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158230
Regression(
r201482
): Crash under dispatch_semaphore_wait
https://bugs.webkit.org/show_bug.cgi?id=158230
Summary
Regression(r201482): Crash under dispatch_semaphore_wait
Chris Dumez
Reported
2016-05-31 12:46:30 PDT
Regression(
r201482
): Crash under dispatch_semaphore_wait: 50 libdispatch.dylib: dispatch_semaphore_wait ==> 50 AVFoundation: -[AVContentKeySession(AVContentKeySession_Internal) contentKeyRequestWithInitializationData:] <== 50 AVFoundation: -[AVStreamDataParser(AVStreamDataParser_FigManifold) _figManifold:formatDescription:orDecryptorDidChange:forTrackID:] 50 MediaToolbox: fragManifold_CallFormatDescriptionCallback 50 MediaToolbox: MovieFragmentManifoldInjectData 50 AVFoundation: -[AVStreamDataParser _appendStreamData:withFlags:] 50 AVFoundation: -[AVStreamDataParser appendStreamData:withFlags:] 50 WebCore: ___ZN7WebCore26SourceBufferPrivateAVFObjC6appendEPKhj_block_invoke 50 libdispatch.dylib: _dispatch_call_block_and_release 50 libdispatch.dylib: _dispatch_client_callout 50 libdispatch.dylib: _dispatch_async_redirect_invoke 50 libdispatch.dylib: _dispatch_client_callout 50 libdispatch.dylib: _dispatch_root_queue_drain 50 libdispatch.dylib: _dispatch_worker_thread3 50 libsystem_pthread.dylib: _pthread_wqthread 50 libsystem_pthread.dylib: start_wqthread
Attachments
Patch
(2.28 KB, patch)
2016-05-31 12:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-05-31 12:47:04 PDT
<
rdar://problem/26534698
>
Chris Dumez
Comment 2
2016-05-31 12:47:33 PDT
I believe I found the problem. I will upload a patch shortly.
Chris Dumez
Comment 3
2016-05-31 12:51:23 PDT
Created
attachment 280170
[details]
Patch
WebKit Commit Bot
Comment 4
2016-05-31 13:31:04 PDT
Comment on
attachment 280170
[details]
Patch Clearing flags on attachment: 280170 Committed
r201521
: <
http://trac.webkit.org/changeset/201521
>
WebKit Commit Bot
Comment 5
2016-05-31 13:31:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug