Regression(r201482): Crash under dispatch_semaphore_wait https://bugs.webkit.org/show_bug.cgi?id=158230 <rdar://problem/26534698>

Reviewed by Eric Carlson.

Stop moving hasSessionSemaphore in the lambda capture since it is used in
dispatch_semaphore_wait() call after the callOnMainThread() call.

No new tests, already covered by tests that are crashing on the bots.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(-[WebAVStreamDataParserListener streamDataParser:didProvideContentKeyRequestInitializationData:forTrackID:]):


Canonical link: https://commits.webkit.org/176317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201521 268f45cc-cd09-0410-ab3c-d52691b4dbfc